--- a/OctoWebSetup.nuspec
+++ b/OctoWebSetup.nuspec
@@ -1,20 +1,24 @@
-<?xml version="1.0"?>
-<package >
-  <metadata>
-    <id>Package</id>
-    <version>1.0.0</version>
-    <authors>Tomas Jansson</authors>
-    <owners>Tomas Jansson</owners>
-    <licenseUrl>http://LICENSE_URL_HERE_OR_DELETE_THIS_LINE</licenseUrl>
-    <projectUrl>http://PROJECT_URL_HERE_OR_DELETE_THIS_LINE</projectUrl>
-    <iconUrl>http://ICON_URL_HERE_OR_DELETE_THIS_LINE</iconUrl>
-    <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>Package description</description>
-    <releaseNotes>Summary of changes made in this release of the package.</releaseNotes>
-    <copyright>Copyright 2013</copyright>
-    <tags>Tag1 Tag2</tags>
-    <dependencies>
-      <dependency id="SampleDependency" version="1.0" />
-    </dependencies>
-  </metadata>
+﻿<?xml version="1.0" encoding="utf-8"?>
+<package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
+    <metadata>
+        <id>OctoWebSetup</id>
+        <version>1.0.0</version>
+        <authors>Tomas Jansson</authors>
+        <owners>Tomas Jansson</owners>
+        <projectUrl>https://github.com/mastoj/OctoWebSetup</projectUrl>
+        <requireLicenseAcceptance>false</requireLicenseAcceptance>
+        <description>PowerShell setup scripts for IIS to use with Octopus</description>
+        <releaseNotes />
+        <copyright>Copyright 2013</copyright>
+        <tags>Octopus PowerShell</tags>
+        <dependencies>
+            <dependency id="SampleDependency" version="1.0" />
+        </dependencies>
+    </metadata>
+    <files>
+        <file src="DeployScripts\Dev.Config.ps1" target="content\Deploy\Dev.Config.ps1" />
+        <file src="DeployScripts\IISConfiguration.ps1" target="content\Deploy\IISConfiguration.ps1" />
+        <file src="DeployScripts\DoConfig.ps1" target="content\Deploy\DoConfig.ps1" />
+        <file src="readme.txt" target="readme.txt" />
+    </files>
 </package>
