--- a/OctoWebSetup.nuspec
+++ b/OctoWebSetup.nuspec
@@ -15,7 +15,7 @@
         </dependencies>
     </metadata>
     <files>
-        <file src="DeployScripts\Dev.Config.ps1" target="content\Deploy\Dev.Config.ps1" />
+        <file src="DeployScripts\Example.Config.ps1" target="content\Deploy\Example.Config.ps1" />
         <file src="DeployScripts\IISConfiguration.ps1" target="content\Deploy\IISConfiguration.ps1" />
         <file src="DeployScripts\DoConfig.ps1" target="content\Deploy\DoConfig.ps1" />
         <file src="DeployScripts\PreDeploy.ps1" target="content\DoConfig.ps1" />
